climate vulnerability cleaning

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -32,6 +32,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Cleaning Non-Energy Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Climate Vulnerability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read climate vulnerability with correct column types\n",
+    "climate_vulnerability = pd.read_csv(\"data/climate_vulnerability/NRI_Table_CensusTracts/NRI_Table_CensusTracts.csv\", dtype = {\"TRACTFIPS\": str, \"RISK_SCORE\": float, \"RISK_RATING\": str})\n",
+    "\n",
+    "# Subset and Rename column names\n",
+    "climate_vulnerability = climate_vulnerability[[\"TRACTFIPS\", \"RISK_SCORE\", \"RISK_RATNG\"]]\n",
+    "climate_vulnerability.columns = [\"GEOID\", \"climate_score\", \"climate_rating\"]\n",
+    "\n",
+    "# Format GEOID column to have 11 digits, pad with 0s as necessary\n",
+    "climate_vulnerability[\"GEOID\"] = np.where(\n",
+    "   climate_vulnerability[\"GEOID\"].str.len() == 10,\n",
+    "   \"0\" + climate_vulnerability[\"GEOID\"],\n",
+    "   climate_vulnerability[\"GEOID\"]\n",
+    ")\n",
+    "\n",
+    "# Write results out\n",
+    "climate_vulnerability.to_csv(\"clean_data/non_energy/climate_vulnerability.csv\", index = False)\n",
+    "climate_vulnerability.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Cleaning Energy Variables"
    ]
   },
