social vulnerability cleaning

--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -71,6 +71,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Social Vulnerability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'to_scv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_0/9_g22rvs1c3d7sy3mlzk7mtm0000gn/T/ipykernel_2315/1987104940.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0msocial_vulnerability\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_scv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"clean_data/non_energy/social_vulnerability.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0msocial_vulnerability\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5476\u001b[0m         ):\n\u001b[1;32m   5477\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5478\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5479\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5480\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_scv'"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in social vulnerability\n",
+    "social_vulnerability = pd.read_csv(\"data/social_vulnerability/SVI2018_US.csv\", dtype = {\"FIPS\": str, \"F_TOTAL\": float})\n",
+    "\n",
+    "# Subset and Rename columns\n",
+    "social_vulnerability = social_vulnerability[[\"FIPS\", \"F_TOTAL\"]]\n",
+    "social_vulnerability.columns = [\"GEOID\", \"svi\"]\n",
+    "\n",
+    "# Format GEOID column to have 11 digits, pad with 0s as necessary\n",
+    "social_vulnerability[\"GEOID\"] = np.where(\n",
+    "   social_vulnerability[\"GEOID\"].str.len() == 10,\n",
+    "   \"0\" + social_vulnerability[\"GEOID\"],\n",
+    "   social_vulnerability[\"GEOID\"]\n",
+    ")\n",
+    "\n",
+    "social_vulnerability.to_csv(\"clean_data/non_energy/social_vulnerability.csv\", index = False)\n",
+    "social_vulnerability.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Cleaning Energy Variables"
    ]
   },
